# fp

./: stack.yaml
bonus/: bonus.cabal
bonus/src/: BooleanTable.hs  Magic.hs
hw1/: fp.cabal  hw1.cabal
hw1/src/: Adts.hs  Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs  Folds.hs  Monoids.hs  Patterns.hs  Simple.hs  TreePrinters.hs
hw1/test/: AdtsSpec.hs  FoldsSpec.hs  MonoidsSpec.hs  PatternsSpec.hs  SimpleSpec.hs
hw2/: hw2.cabal
hw2/src/: Base.hs  CustomInstances.hs  NonDeterministic.hs  Optionals.hs  Parsers.hs
hw2/src/Monads/: Definitions.hs  FromMonad.hs  FromMonadFish.hs  FromMonadJoin.hs
hw2/src/Parser/: Common.hs  Core.hs  Lets.hs  SExpr.hs
hw2/test/: NonDeterministicSpec.hs  OptionalsSpec.hs
hw2/test/Parser/: CommonSpec.hs  CoreSpec.hs  LetsSpec.hs  SExprSpec.hs
hw3/: hw3.cabal
hw3/app/: Main.hs
hw3/sample/: example.src  fact.src  fib.src  test.src
hw3/src/: Expr.hs  ExprParser.hs
hw3/src/Core/: Expr.hs  Program.hs  ProgramIO.hs  Typesystem.hs  Variables.hs
hw3/src/Parser/: Common.hs  ExprParser.hs  ProgramParser.hs  VariablesParser.hs
hw4/: hw4.cabal  sorts.html
hw4/bench/: Main.hs
hw4/src/: BaseLens.hs  FileSystem.hs  TemplateHaskell.hs  TemplateHaskell1.hs
hw4/test/: BaseLensSpec.hs
