name:                hw1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/artemohanjanyan/fp#readme
license:             BSD3
license-file:        LICENSE
author:              Artem Ohanjanyan
maintainer:          artemohanjanyan@gmail.com
copyright:           Copyright: (c) 2017 Artem Ohanjanyan
category:            Study
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Simple
                     , Patterns
                     , Adts
                     , Folds
                     , Monoids
                     , TreePrinters
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , random
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SimpleSpec
                     , PatternsSpec
                     , AdtsSpec
                     , FoldsSpec
                     , MonoidsSpec
  build-depends:       base
                     , hw1
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/artemohanjanyan/fp
  subdir:   hw1
