name:                hw3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/artemohanjanyan/fp#readme
license:             BSD3
license-file:        LICENSE
author:              Artem Ohanjanyan
maintainer:          artemohanjanyan@gmail.com
copyright:           Copyright: (c) 2017 Artem Ohanjanyan
category:            Study
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Core.Typesystem
                     , Core.Expr
                     , Core.Variables
                     , Core.Program
                     , Core.ProgramIO
                     , Parser.Common
                     , Parser.ExprParser
                     , Parser.VariablesParser
                     , Parser.ProgramParser
  default-extensions:  OverloadedStrings
                     , FlexibleContexts
                     , ConstraintKinds
                     , TypeApplications
                     , ScopedTypeVariables
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , containers
                     , megaparsec >= 6.0
                     , bytestring
                     , ether
                     , errors
                     , parser-combinators
  default-language:    Haskell2010

executable hw3lang
  hs-source-dirs:      app
  main-is:             Main.hs
  default-extensions:  TypeApplications
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 6.0
                     , bytestring
                     , hw3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/artemohanjanyan/fp
  subdir:   hw3
