name:                hw4
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/artemohanjanyan/fp#readme
license:             BSD3
license-file:        LICENSE
author:              Artem Ohanjanyan
maintainer:          artemohanjanyan@gmail.com
copyright:           Copyright: (c) 2017 Artem Ohanjanyan
category:            Study
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TemplateHaskell
                     , TemplateHaskell1
                     , BaseLens
                     , FileSystem
  default-extensions:  TemplateHaskell
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , template-haskell
                     , containers
                     , text
                     , lens
                     , directory
                     , filepath
                     , mtl
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , criterion
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/artemohanjanyan/fp
  subdir:   hw4
